# oss-crs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTEGRATION.md  LICENSE  MANIFEST.in  PLAN.md  README.md  pyproject.toml  requirements.txt  verify-patch-all.py  verify-patch-inc.sh  verify-patch-no-inc.sh
.claude/agents/: rts-c-debugger.md  test-inc-build.md
.claude/commands/: analyze-rts-logs.md  fix-c-incremental-build.md  suggest-rts-fixes.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  pages.yml  test-pages.yml
bug_finding/: __init__.py
bug_finding/key_provisioner/: Dockerfile  key_provisioner.py
bug_finding/seed_watcher/: Dockerfile  pyproject.toml  seed_utils.py  seed_watcher.py
bug_finding/src/: __init__.py  __main__.py  build.py  cgroup.py  clean.py  crs_main.py  crs_utils.py  prepare.py  render_compose.py  run.py  utils.py
bug_finding/templates/: compose-litellm.yaml.j2  compose.yaml.j2  config-litellm.yaml
bug_finding/tests/: test_crs_main.py  test_render_compose.py
bug_fixing/docs/: rts-output-standard.md
bug_fixing/src/: __main__.py
bug_fixing/tests/: test_analysis_log.py
builder/: README.md
builder/oss-crs/: crs.yaml
common/config/: crs.py  crs_compose.py
crs/src/: __main__.py  crs.py  crs_compose.py  target.py  ui.py  utils.py
crs_registry/42-patch-agent/: config-crs.yaml  pkg.yaml
crs_registry/atlantis-c-bullseye/: pkg.yaml
crs_registry/atlantis-c-deepgen/: config-crs.yaml  pkg.yaml
crs_registry/atlantis-c-libafl/: config-crs.yaml  pkg.yaml
crs_registry/atlantis-claude-code/: pkg.yaml
crs_registry/atlantis-java-atljazzer/: config-crs.yaml  pkg.yaml
crs_registry/atlantis-java-main/: config-crs.yaml
crs_registry/atlantis-multi-retrieval/: pkg.yaml
crs_registry/atlantis-multilang-dind/: config-crs.yaml
crs_registry/atlantis-multilang-dind-given_fuzzer/: config-crs.yaml  pkg.yaml
crs_registry/atlantis-multilang-given_fuzzer/: config-crs.yaml  pkg.yaml
crs_registry/atlantis-prism/: pkg.yaml
crs_registry/atlantis-vincent/: pkg.yaml
crs_registry/buttercup-patcher/: pkg.yaml
crs_registry/crs-libfuzzer/: config-crs.yaml  pkg.yaml
crs_registry/crs-multilang/: config-crs.yaml  pkg.yaml
crs_registry/crs-multilang-dind/: config-crs.yaml  pkg.yaml
crs_registry/mock-dind/: config-crs.yaml  pkg.yaml
crs_registry/patch-agent/: config-crs.yaml  pkg.yaml
crs_registry/swe-agent/: config-crs.yaml  pkg.yaml
crs_registry/test-budget-2/: pkg.yaml
crs_registry/test-multi-container/: config-crs.yaml  pkg.yaml
design-docs/: architecture.md  docker-compose-plan.md  integration.md  local-project-support.md
docs/: CRS_COMPOSE_CONFIG.md  CRS_CONFIG.md  INTEGRATION.md  README.md  RFC.md  cgroup-parent-setup.md  crs-development-guide.md  registry.md
docs/config/: crs-compose.md  crs.md  target-project.md
docs/conifg/: crs-compose.md  crs.md  llm.md
docs/design/: architecture.md  configuration.md  libCRS.md  oss-crs-interface.md  parallel.md
example/42-bugfind/: 42-bugfind-compose.yaml  litellm-config.yaml
example/42-directed/: compose.yaml
example/42-seedgen/: compose.yaml  litellm-config.yaml
example_configs/: atlantis-multilang-given_fuzzer.yaml
key_provisioner/: pyproject.toml
libCRS/: README.md  install.sh  pyproject.toml
libCRS/libCRS/: base.py  common.py  fetch.py  infra_client.py  local.py  submit.py
libCRS/libCRS/cli/: main.py
libCRS/src/: base.py  build.py  common.py  infra_client.py  local.py  pov.py  seed.py  submit.py
libCRS/src/cli/: main.py
libCRS/tests/: test_infra_client.py
oss-crs-infra/: dependabot-pins.Dockerfile
oss-crs-infra/seed-ensembler/: Dockerfile  README.md  pyproject.toml
oss-crs-infra/seed-ensembler/seed_ensembler/: __init__.py  __main__.py  config.py  constants.py  direct_handler.py  harness.py  harness_discovery.py  libfuzzer_handler.py  libfuzzer_result.py  passthrough.py  pool.py  util.py
oss-crs-infra/seed-ensembler/seed_ensembler/test_data/: libfuzzer_output_01.txt  libfuzzer_output_02.txt  libfuzzer_output_03.txt  libfuzzer_output_04.txt
oss-crs-infra/seed-ensembler/tests/: conftest.py  test_config.py  test_harness.py  test_harness_discovery.py  test_libfuzzer_handler.py  test_libfuzzer_result.py  test_passthrough.py  test_pool.py  test_util.py
oss_crs/: __init__.py  __main__.py  crs_main.py  render_compose.py
registry/: 42-directed.yaml  42-seedgen.yaml  atlantis-c-bullseye.yaml  atlantis-c-deepgen.yaml  atlantis-java-main.yaml  atlantis-multilang-given_fuzzer.yaml  atlantis-multilang-wo-concolic.yaml  builder-sidecar-full.yaml  builder-sidecar-lite.yaml  buttercup-seed-gen.yaml  crs-atlantis-ensemble.yaml  crs-atlantis-triage.yaml  crs-bug-finding-claude-code.yaml  crs-bug-finding-codex.yaml  crs-bug-finding-copilot-cli.yaml  crs-bug-finding-gemini-cli.yaml  crs-bug-finding-opencode-clear.yaml  crs-bug-finding-opencode.yaml  crs-claude-code-seedgen.yaml  crs-claude-code.yaml  crs-clusterfuzz-triage.yaml  crs-codex.yaml  crs-copilot-cli.yaml  crs-gemini-cli.yaml  crs-jazzer.yaml  crs-libfuzzer.yaml  crs-multi-retrieval.yaml  crs-opencode.yaml  crs-patch-ensemble.yaml  crs-prism.yaml  crs-roboduck-triage.yaml  crs-shellphish-aijon.yaml  crs-shellphish-c-fuzzers-aflpp.yaml  crs-shellphish-c-fuzzers-libfuzzer.yaml  crs-shellphish-c-fuzzers.yaml  crs-shellphish-discoveryguy.yaml  crs-shellphish-grammar.yaml  crs-shellphish-jvm-fuzzers.yaml  crs-shellphish-quickseed.yaml  crs-vincent.yaml  (+5 more)
scripts/: compare_rts_all_projects.sh  create_workdir_tarball.py  make_all_c_inc_snapshot.sh  make_all_jvm_inc_snapshot.sh  parse_inc_build_logs.py  setup-cgroup-user-delegation.sh  test-run.sh  test_all_c_inc_build.sh  test_all_jvm_rts.sh  verify-patch-all.py
site/: docusaurus.config.js
templates/: compose.yaml.j2
tests/: test_crs_main.py  test_render_compose.py
(+294 files in other folders)
