[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-crs"
version = "0.1.0"
description = "Cyber Reasoning System (CRS) build and run tools for bug finding and fixing"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Team Atlanta"}
]
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.3",
    "Jinja2>=3.1.6",
    "python-dotenv>=1.0.1",
    "docker>=7.1.0",
    "ruff>=0.14.5",
    "pyright>=1.1.407",
]

[project.scripts]
oss-bugfind-crs = "bug_finding.src.__main__:main"
oss-bugfix-crs = "bug_fixing.src.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["bug_finding", "bug_finding.src", "bug_fixing", "bug_fixing.src", "crs_registry"]

[tool.setuptools.package-data]
"bug_finding" = [
    "templates/*.j2",
    "key_provisioner/*.py",
    "key_provisioner/Dockerfile",
    "key_provisioner/*.toml",
]
"crs_registry" = ["*/*.yaml"]
