[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-crs"
version = "0.1.0"
description = "Cyber Reasoning System (CRS) build and run tools for bug finding and fixing"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Team Atlanta"}
]
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.3",
    "Jinja2>=3.1.6",
    "python-dotenv>=1.0.1",
    "docker>=7.1.0",
    "ruff>=0.14.5",
    "pyright>=1.1.407",
    "gitpython>=3.1.45",
    "pydantic>=2.12.5",
]

[project.scripts]
crs-compose = "crs.src.cli.crs_compose:main"
crs = "crs.src.cli.crs:main"
oss-bugfind-crs = "bug_finding.src.__main__:main"
oss-bugfix-crs = "bug_fixing.src.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "watchdog>=4.0.0",
]

[tool.setuptools]
packages = [
    "crs", "crs.src",
    "bug_finding", "bug_finding.src", "bug_finding.src.render_compose",
    "bug_fixing", "bug_fixing.src",
    "bug_fixing.src.oss_patch",
    "bug_fixing.src.oss_patch.crs_builder",
    "bug_fixing.src.oss_patch.crs_context",
    "bug_fixing.src.oss_patch.project_builder",
    "bug_fixing.src.oss_patch.inc_build_checker",
    "crs_registry"
]

[tool.setuptools.package-data]
"bug_finding" = [
    "templates/*.j2",
    "key_provisioner/*.py",
    "key_provisioner/Dockerfile",
    "key_provisioner/*.toml",
    "seed_watcher/*.py",
    "seed_watcher/Dockerfile",
    "seed_watcher/*.toml",
]
"bug_fixing" = [
    "base_images/docker_cache_builder/*",
    "base_images/oss_patch_runner/*",
]
"crs_registry" = ["*/*.yaml"]

[dependency-groups]
dev = [
    "ty>=0.0.4",
]

[tool.ty.src]
include = [
    "bug_finding",
    "bug_fixing",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require network access, may be slow)",
]
