[project]
name = "libcrs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=6.0.0",
]


[project.scripts]
"libCRS" = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
